# IMDb

./: README.md
top-imdb/: LEEME.md
top-imdb/cmd/: mejores.sh  peores.sh
top-imdb/python/: pyproject.toml
top-imdb/python/imdb/: __init__.py  downloader.py  imdb_analysis.py  review_parser.py
top-imdb/python/notebooks/: Peliculas.ipynb  Peliculas_clases.ipynb
top-imdb/python/scripts/: test_script.py
